# minecraft-k8s

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: server.toml
crates/minecraft-k8s/: Cargo.toml
crates/minecraft-k8s/src/: cli.rs  config.rs  dashboard.rs  error.rs  eula.rs  health.rs  k8s.rs  lib.rs  main.rs  mods.rs  rcon.rs
crates/minecraft-k8s/static/: index.html
crates/minecraft-k8s/tests/: integration.rs
docker/: Dockerfile.minecraft  Dockerfile.rust  Dockerfile.rust-test  docker-compose.yml
k8s/: kustomization.yaml  manifests.yaml
mods/: README.md
scripts/: build.sh  publish.sh  render-manifests.sh  test.sh  validate-manifests.sh
