[package]
name = "minecraft-k8s"
description = "Kubernetes tooling for modded Minecraft servers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "minecraft-k8s"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
